<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tanzimat">تنظیمات</string>
    <string name="rahnama">راهنما</string>
    <string name="about">درباره</string>
    <string name="app_name">کوک یار گیتار</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="title_activity_menu">Menu</string>
    <string name="tuner">کوک ساز</string>
    <string name="Kuk_yar">کوک یار</string>
    <string name="kharak_1">خرک اول</string>
    <string name="kharak_2">خرک دوم</string>
    <string name="kharak_3">خرک سوم</string>
    <string name="kharak_4">خرک چهارم</string>
    <string name="kharak_5">خرک پنجم</string>
    <string name="kharak_6">خرک ششم</string>
    <string name="kharak_7">خرک هفتم</string>
    <string name="kharak_8">خرک  هشتم</string>
    <string name="kharak_9">خرک  نهم</string>
    <string name="santur">سنتور</string>
    <string name="kamancheh">کمانچه</string>
    <string name="shur">شور</string>
    <string name="esfehan">اصفهان</string>
    <string name="homayun">همایون</string>
    <string name="mahur">ماهور</string>
    <string name="segah">سه گاه</string>
    <string name="chahargah">چهارگاه</string>
    <string name="setar">سه تار</string>
    <string name="sim_zard">زرد</string>
    <string name="sim_sefid">سفید</string>
    <string name="sim_poshKharak">پشت خرک</string>
    <string name="tar">تار</string>
    <string name="exit">خروج</string>
    <string name="sim_1">سیم اول</string>
    <string name="sim_2">سیم دوم</string>
    <string name="sim_3">سیم سوم</string>
    <string name="sim_4">سیم چهارم</string>
    <string name="sim_5">سیم پنجم</string>
    <string name="sim_6">سیم ششم</string>
    <string name="doSolDo">دو-سل-دو</string>
    <string name="doSolRe">دو-سل-ر</string>
    <string name="doFaDo">دو-فا-دو</string>
    <string name="nimParde">نیم پرده پایین کوک شود</string>
    <string name="kharak_1z">خرک اول سیم های زرد</string>
    <string name="kharak_2z">خرک دوم سیم های  زرد</string>
    <string name="kharak_3z">خرک سوم  سیم های زرد</string>
    <string name="kharak_4z">خرک چهارم سیم های زرد</string>
    <string name="kharak_5z">خرک پنجم زرد سیم های زرذ</string>
    <string name="kharak_6z">خرک ششم  سیم های زرد</string>
    <string name="kharak_7z">خرک هفتم  سیم های زرد</string>
    <string name="kharak_8z">خرک  هشتم  سیم های زرد</string>
    <string name="kharak_9z">خرک  نهم  سیم های زرد</string>
    <string name="kharak_1s">خرک اول سیم های سفید</string>
    <string name="kharak_2s">خرک دوم  سیم های سفید</string>
    <string name="kharak_3s">خرک سوم  سیم های سفید</string>
    <string name="kharak_4s">خرک چهارم  سیم های سفید</string>
    <string name="kharak_5s">خرک پنجم سیم های  سفید</string>
    <string name="kharak_6s">خرک ششم  سیم های سفید</string>
    <string name="kharak_7s">خرک هفتم  سیم های سفید</string>
    <string name="kharak_8s">خرک  هشتم  سیم های سفید</string>
    <string name="kharak_9s">خرک  نهم  سیم های سفید</string>
    <string name="kharak_1p">خرک اول  سیم های پشت خرک</string>
    <string name="kharak_2p">خرک دوم  سیم های پشت خرک</string>
    <string name="kharak_3p">خرک سوم  سیم های پشت خرک</string>
    <string name="kharak_4p">خرک چهارم  سیم های پشت خرک</string>
    <string name="kharak_5p">خرک پنجم  سیم های پشت خرک</string>
    <string name="kharak_6p">خرک ششم  سیم های پشت خرک</string>
    <string name="kharak_7p">خرک هفتم  سیم های پشت خرک</string>
    <string name="kharak_8p">خرک  هشتم  سیم های پشت خرک</string>
    <string name="kharak_9p">خرک  نهم  سیم های پشت خرک</string>
    <string name="title_activity_tuner_menu">TunerMenu</string>
    <string name="milaReSol">می-لا-ر-سل</string>
    <string name="ReLaRela">ر-لا-ر-لا</string>
    <string name="MiLaMila">می-لا-می-لا</string>
    <string name="ReLaReSol">ر-لا-ر-سل</string>
    <string name="freeTuner">تیونر</string>
    <string name="aboutText">کوک یار ویلن</string>
    <string name="aboutText1">طراح و برنامه نویس  پویا احمدوند</string>
    <string name="aboutText3">لطفا انتقادات، پیشنهادات خود را از طریق آدرس زیر مکاتبه فرمایید</string>
    <string name="aboutText2">pouya.ahmadvand@gmail.com</string>
    <string name="bazgasht">بازگشت</string>
    <string name="title_activity_tuning_fork">دیاپازون</string>
    <string name="posision_select">پوزیسیون مورد نظر را انتخاب کنید :</string>
    <string name="sound_select">صدای نت را انتخاب کنید :</string>
    <string name="play_sound">پخش صدای نت</string>
    <string name="koron">کرن</string>
    <string name="bekar">بکار</string>
    <string name="bemol">بمل</string>
    <string name="sori">سری</string>
    <string name="diyez">دیز</string>
    <string name="setting">تنظیمات</string>
    <string name="note_select">نت مورد نظر را انتخاب کنید :</string>
    <string name="TunerHelp">برای کوک کردن ساز پس از انتخاب سیم مورد نظر با استفاده از تیونری که در صفحه مشاهده می شود عمل کوک کردن را انجام می دهیم چنانچه عقربه تیونر در سمت چپ خط سفید وسط باشد باید سیم را در جهت ساعتگرد چرخاند (سفت کرد) تا رنگ عقربه سبز شده و بر روی نوار سفید مرکزی قرار بگیرد در صورتی که عقربه در سمت راست باشد باید سیم را در جهت خلاف عقربه های ساعت چرخاند (شل کرد)
برای کوک کردن ساز بهتر است از سیم اول شروع کرده و به ترتیب سیم ها را کوک کنیم.
</string>
    <string name="help">کوکی که در این برنامه برای گیتار در نظر گرفته شده است کوک می سی سل ر لا می می باشد.
</string>
    
    <string-array name="posision_array">
        <item>پوزیسیون اول</item>
        <item>پوزیسیون دوم</item>
        <item>پوزیسیون سوم</item>
        <item>پوزیسیون چهارم</item>
        <item>پوزیسیون پنجم</item>
        <item>پوزیسیون ششم</item>
        <item>پوزیسیون هفتم</item>
    </string-array>
    <string-array name="note_array">
        <item>دو</item>
        <item>ر</item>
        <item>می</item>
        <item>فا</item>
        <item>سل</item>
        <item>لا</item>
        <item>سی</item>
    </string-array>
    <string name="show">پیام من</string>
      <string name="nazar">ارسال نظر</string>
    <string name="payamHead">این پیام فقط یک بار نمایش داده خواهد شد لطفا چند دقیقه وقت بذاريد و این متن رو بخونین : </string>
    <string name="payam">
        اول از همه تشکر از اینکه کوک یار رو انتخاب کردید. 
نرم افزاری که در حال استفاده از آن هستید حاصل بیش از یک سال کار و تحقیق اینجانب در زمینه موسیقی اصیل ایرانی و پردازش صوت می باشد که برای اولین بار در کشور انجام شده. 
هدف اصلی از ایجاد کوک یار،فراهم آوردن ابزاری راحت برای کوک کردن سازهای اصیل ایرانی و سازهای رایجع غیر ایرانی، بدون نیاز به دانش موسیقی خاص، برای نوازندگان به ویژه نوازندگان مبتدی است.
این نرم افزار تازه منتشر شده و در حال توسعه می باشد و طبیعتاً عاری از خطا و اشتباه نیست بنابراین از شما دوست عزیز خواهشمندم من رو از نظرات ارزشمندتون جهت هرچه بهتر شدن کوک یار بی بهره نگذارید. 
برای راحتی شما بزرگواران در ارسال نظراتتون، گزینه ارسال نظر به منوی اصلی برنامه اضافه شده است. 
به امید اینکه با کوک یار عده ی بیشتری به سمت موسیقی متمایل شوند</string>
    
    <string name="title_activity_main">MainActivity</string>
    <string name="tuning">تشخیص خودکار سیم</string>
    <string name="kook_change_label">تغییر کوک</string>
    <string-array name="kookChange">
        <item>ساز سر جای خود کوک شود</item>
        <item>ساز ربع پرده پایین تر کوک شود</item>
        <item>ساز نیم پرده پایین تر کوک شود</item>
        <item>ساز یک پرده پایین تر کوک شود</item>
    </string-array>
   <string name="edame">ادامه</string>
        <string-array name="sensitive">
        <item>کم(مناسب محل های شلوغ)</item>
        <item>متوسط(مناسب محل های نسبتا آرام)</item>
        <item>زیاد(مناسب محل های آرام)</item>
    </string-array>
    <string-array name="sensitivValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
        <string-array name="refArray">
        <item>410</item>
        <item>411</item>
        <item>412</item>
        <item>413</item>
        <item>414</item>
        <item>415</item>
        <item>416</item>
        <item>417</item>
        <item>418</item>
        <item>419</item>
        <item>420</item>
        <item>421</item>
        <item>422</item>
        <item>423</item>
        <item>424</item>
        <item>425</item>
        <item>426</item>
        <item>427</item>
        <item>428</item>
        <item>429</item>
        <item>430</item>
        <item>431</item>
        <item>432</item>
        <item>433</item>
        <item>434</item>
        <item>435</item>
        <item>436</item>
        <item>437</item>
        <item>438</item>
        <item>439</item>
        <item>440</item>
        <item>441</item>
        <item>442</item>
        <item>443</item>
        <item>444</item>
        <item>445</item>
        <item>446</item>
        <item>447</item>
        <item>448</item>
        <item>449</item>
        <item>450</item>
    </string-array>
<string name="changeV3">تغییرات نسخه ١.٢ </string>
    <string name="changeV3Text">١-افزایش دقت کوک یار
\n٢-اضافه شدن قابلیت تنظیم میزان حساسیت کوک یار(اضافه شده در قسمت تنظیمات تیونر)
\n٣-اضافه شدن قابلیت تنظیم فرکانس نت مرجع بین ۴١٠ تا ۴۵٠ هرتز (اضافه شده در قسمت تنظیمات تیونر)

   </string>
</resources>