<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gitarbg2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/TunerButton"
                android:layout_width="182dp"
                android:layout_height="70dp"
                 android:textColor="@color/white"
                 android:background="@drawable/custom"
                android:text="@string/tuner"
                android:textSize="30sp" />

            <Button
                android:id="@+id/rahnama"
                android:layout_width="182dp"
                android:layout_height="70dp"
                 android:textColor="@color/white"
                 android:background="@drawable/custom"
                android:layout_marginTop="24dp"
                android:text="@string/rahnama"
                android:textSize="30sp" />

            <Button
                android:id="@+id/mail"
                android:layout_width="182dp"
                android:layout_height="70dp"
                 android:textColor="@color/white"
                 android:background="@drawable/custom"
                android:layout_marginTop="24dp"
                android:text="@string/nazar"
                android:textSize="30sp" />

            <Button
                android:id="@+id/exitButton"
                android:layout_width="182dp"
                android:layout_height="70dp"
                 android:textColor="@color/white"
                 android:background="@drawable/custom"
                android:layout_marginTop="25dp"
                android:text="@string/exit"
                android:textSize="30sp" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>